welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:27: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ZigZag:30: error: expected start of definition
	override def forward()  {
                 ^ZigZag:33: error: expected start of definition
	override def backward(i:Int) {
                 ^ZigZag:36: error: expected start of definition
	override def backward() {
                 ^ZigZag:39: error: Unmatched closing brace '}' ignored here
}
^